// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transforming JS modules: assets extract image sizes, platform, scale 1`] = `
Object {
  "details": Object {
    "assetPath": "foo.png",
    "contentBase64": "eyJfX3NpemUiOnsid2lkdGgiOjMwLCJoZWlnaHQiOjIwfX0=",
    "contentType": "png",
    "filePath": "foo.png",
    "hash": "AGicIEH/IsIy5t7si/9ocI6Ur8s=",
    "physicalSize": Object {
      "height": 20,
      "width": 30,
    },
    "platform": null,
    "scale": 1,
  },
  "type": "asset",
}
`;

exports[`transforming JS modules: assets extract image sizes, platform, scale 2`] = `
Object {
  "details": Object {
    "assetPath": "foo.png",
    "contentBase64": "eyJfX3NpemUiOnsid2lkdGgiOjMwLCJoZWlnaHQiOjIwfX0=",
    "contentType": "png",
    "filePath": "foo@2x.ios.png",
    "hash": "AGicIEH/IsIy5t7si/9ocI6Ur8s=",
    "physicalSize": Object {
      "height": 20,
      "width": 30,
    },
    "platform": "ios",
    "scale": 2,
  },
  "type": "asset",
}
`;

exports[`transforming JS modules: assets throws on empty images 1`] = `"Image asset \`foo.png\` cannot be an empty file."`;
